<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
            <item
                android:id="@+id/home_ID2"
                android:icon="@drawable/home"
                android:title="@string/home" />
            <item
                android:id="@+id/Fav_Id2"
                android:icon="@drawable/fav"
                android:title="@string/Favorites" />
            <item
                android:id="@+id/alerts2"
                android:icon="@drawable/alert"
                android:title="@string/Alerts"
                />
            <item
                android:id="@+id/setting2"
                android:icon="@drawable/settings"
                android:title="@string/Setting" />

    </group>
</menu>