<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/home_background"
    >

    <ScrollView
        android:layout_width="404dp"
        android:layout_height="730dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="130dp"
                android:layout_height="34dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/location"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="23dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/locationgroup"
                android:layout_width="246dp"
                android:layout_height="107dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.106"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <RadioButton
                    android:id="@+id/gpsSet_ID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Gps" />

                <RadioButton
                    android:id="@+id/mapSet_ID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/map" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="130dp"
                android:layout_height="34dp"
                android:layout_marginStart="16dp"
                android:text="@string/Language"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="23dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationgroup" />

            <RadioGroup
                android:id="@+id/languagegroup"
                android:layout_width="226dp"
                android:layout_height="88dp"
                app:layout_constraintStart_toStartOf="@+id/locationgroup"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <RadioButton
                    android:id="@+id/eng_Id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/English" />

                <RadioButton
                    android:id="@+id/Arab_ID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Arabic" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="186dp"
                android:layout_height="29dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/Temp"
                android:textColor="@color/white"
                android:textSize="23dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/languagegroup" />

            <RadioGroup
                android:id="@+id/tempgroup"
                android:layout_width="260dp"
                android:layout_height="172dp"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <RadioButton
                    android:id="@+id/calsius_Id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Cel" />

                <RadioButton
                    android:id="@+id/kelvin_Id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kelvin" />

                <RadioButton
                    android:id="@+id/fahrenheit_Id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fahrenheit" />

            </RadioGroup>


            <TextView
                android:id="@+id/textView4"
                android:layout_width="147dp"
                android:layout_height="37dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/WindSpeed"
                android:textColor="@color/white"
                android:textSize="23dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tempgroup" />

            <RadioGroup
                android:id="@+id/windGroup"
                android:layout_width="238dp"
                android:layout_height="97dp"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <RadioButton
                    android:id="@+id/meterPerSec_Id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/meterpersec" />

                <RadioButton
                    android:id="@+id/MilePreHour_Id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Mileperhour" />

            </RadioGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>