<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    tools:context=".Home.HomeView.Home_View"
    android:id="@+id/drawerLayout">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_mynavdrawer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/activity_main_drawer" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Desc_ID"
                android:layout_width="338dp"
                android:layout_height="199dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/borders"
                android:text="@string/sky"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Day_Id" />


            <TextView
                android:id="@+id/Location_ID"
                android:layout_width="274dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:text="Giza , Governorate"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/Day_Id"
                android:layout_width="178dp"
                android:layout_height="28dp"
                android:layout_marginTop="8dp"
                android:text="Fri 9 ,Feb"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Location_ID" />


            <TextView
                android:id="@+id/Temp_ID"
                android:layout_width="306dp"
                android:layout_height="86dp"
                android:layout_marginTop="60dp"
                android:text="30 C"
                android:textAlignment="center"
                android:textSize="48sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/Desc_ID"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="@+id/Desc_ID"
                app:layout_constraintTop_toTopOf="@+id/Desc_ID" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/Hour_Recycler"
                android:layout_width="396dp"
                android:layout_height="205dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.457"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/currentImageId">

            </androidx.recyclerview.widget.RecyclerView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/Week_Recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.528"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Hour_Recycler">

            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="245dp"
                android:layout_marginLeft="18dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Week_Recycler">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.25"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/Pressure_Image_Id"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            app:layout_anchorGravity="top|center"
                            app:srcCompat="@drawable/pressure" />

                        <TextView
                            android:id="@+id/Pressure_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Pressure"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/Pressure_Id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_weight="1"
                            android:text="1021 hpa"
                            android:textAlignment="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.25"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/Humidity_Image_id"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            app:layout_anchorGravity="top|center"
                            app:srcCompat="@drawable/drop" />

                        <TextView
                            android:id="@+id/Humidity_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Humidity"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/Humdidity_Id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="TextView"
                            android:textAlignment="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/Wind_Image_Id"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1.25"
                            app:layout_anchorGravity="top|center"
                            app:srcCompat="@drawable/wind" />

                        <TextView
                            android:id="@+id/Wind_Title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Wind"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/Wind_Id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="23"
                            android:textAlignment="center" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="245dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/Cloud_Image_Id"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            app:layout_anchorGravity="top|center"
                            app:srcCompat="@drawable/cloud" />

                        <TextView
                            android:id="@+id/Cloud_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Cloud"
                            android:textAlignment="center"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/Cloud_Id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="10 %"
                            android:textAlignment="center"
                            android:textSize="16sp" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.25"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/UltraViolet_Image_Id"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            app:layout_anchorGravity="top|center"
                            app:srcCompat="@drawable/ultraviolt" />

                        <TextView
                            android:id="@+id/UltraViolet_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/UltraViolet"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/UltraViolet_Id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_weight="1"
                            android:text="1021 hpa"
                            android:textAlignment="center"
                            android:textSize="16sp" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.25"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/Visibility_Image_Id"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            app:layout_anchorGravity="top|center"
                            app:srcCompat="@drawable/visible" />

                        <TextView
                            android:id="@+id/Visibility_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/Visibility"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/Visibility_Id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_weight="1"
                            android:text="1021 m"
                            android:textAlignment="center"
                            android:textSize="16sp" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/currentImageId"
                android:layout_width="305dp"
                android:layout_height="106dp"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                app:layout_anchorGravity="top|center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Temp_ID"
                tools:srcCompat="@tools:sample/avatars" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>
